--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@
     font-family: "Yekan";
     src: url(./assets/yekan/YekanBakh-Bold.woff2);
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
   }
 
   @font-face {
